--- a/BERT_Base_Misinformation_Classification.ipynb
+++ b/BERT_Base_Misinformation_Classification.ipynb
@@ -28,9 +28,9 @@
         "# COVID-19 Tweet Misinformation Detection using BERT\n",
         "\n",
         "Contributers:\n",
-        "Prof Dr Kathleen Carley<br>\n",
+        "Sumit Kumar<br>\n",
         "Raj Ratn Pranesh<br>\n",
-        "Sumit Kumar"
+        "Prof Dr Kathleen Carley"
       ]
     },
     {
