--- a/BERT_Base_Misinformation_Classification.ipynb
+++ b/BERT_Base_Misinformation_Classification.ipynb
@@ -30,7 +30,7 @@
         "Contributers:\n",
         "Sumit Kumar<br>\n",
         "Raj Ratn Pranesh<br>\n",
-        "Prof Dr Kathleen Carley"
+        "Prof Kathleen M. Carley"
       ]
     },
     {
